refactor: improve and simplify service unit tests
- Refactor PostServiceTest with better test organization
- Refactor CommentServiceTest with clearer test cases
- Remove redundant test code and improve readability
- Enhance mock setup and verification patterns